refactor: Make this agent conform to the ADL CLI for easier maintenance (#18)
* refactor: Make this agent conform to the ADL CLI for easier maintenance

- Implemented ListCalendarEventsSkill to list upcoming events from Google Calendar with mock support.
- Created UpdateCalendarEventSkill for updating existing events in Google Calendar, with a placeholder for logic.
- Removed old toolbox handlers and mocks related to calendar operations to streamline the codebase.

Signed-off-by: Eden Reich <eden.reich@gmail.com>

* chore: Ensure newline at end of file in agent.yaml

Signed-off-by: Eden Reich <eden.reich@gmail.com>

* refactor: Update README with CLI usage instructions and remove obsolete healthcheck service from docker-compose

Signed-off-by: Eden Reich <eden.reich@gmail.com>

* refactor: Swap google-calendar-agent and inference-gateway service configurations in docker-compose.yaml

This repository is about the Google Calendar Agent, so I prioritize it at the top of the dependencies.

P.S the inference gateway is not a dependency, it's rather could be swapped with any inference provider directly that supports OpenAI - but for the sake of simplicity I will use it so I can easily swap and see the metrics.

Signed-off-by: Eden Reich <eden.reich@gmail.com>

* refactor: Remove pull_policy from google-calendar-agent in docker-compose.yaml

Signed-off-by: Eden Reich <eden.reich@gmail.com>

* fix: Correct entrypoint argument from --set-url to --server-url in a2a-debugger service

Signed-off-by: Eden Reich <eden.reich@gmail.com>

* chore: Update ADL CLI version to 0.20.6 in generated files and adjust mock mode configuration

Signed-off-by: Eden Reich <eden.reich@gmail.com>

* fix: Correct formatting of GOOGLE_SERVICE_ACCOUNT_JSON description in README

Signed-off-by: Eden Reich <eden.reich@gmail.com>

* refactor: Simplify architecture section in README by removing obsolete Inference Gateway flow - I'll be removing it from the gateway

It's too complex this setup and probabl

--- a/example/docker-compose.yaml
+++ b/example/docker-compose.yaml
@@ -1,68 +1,101 @@
 ---
 services:
+  google-calendar-agent:
+    build:
+      context: ..
+    environment:
+      ENVIRONMENT: development
+      A2A_AGENT_URL: http://google-calendar-agent:8080
+      A2A_AGENT_CLIENT_PROVIDER: ${PROVIDER:-deepseek}
+      A2A_AGENT_CLIENT_MODEL: ${MODEL:-deepseek-chat}
+      A2A_AGENT_CLIENT_BASE_URL: http://inference-gateway:8080/v1
+      A2A_SERVER_READ_TIMEOUT: 120s
+      A2A_SERVER_WRITE_TIMEOUT: 120s
+      A2A_SERVER_IDLE_TIMEOUT: 120s
+      A2A_AGENT_CLIENT_TIMEOUT: 120s
+      A2A_QUEUE_CLEANUP_INTERVAL: 500s
+      A2A_AGENT_CLIENT_MAX_CHAT_COMPLETION_ITERATIONS: 20
+      GOOGLE_SERVICE_ACCOUNT_JSON: ${GOOGLE_SERVICE_ACCOUNT_JSON}
+      GOOGLE_CREDENTIALS_PATH: /tmp/google-credentials.json
+      GOOGLE_CALENDAR_MOCK_MODE: false
+      GOOGLE_CALENDAR_ID: ${GOOGLE_CALENDAR_ID}
+      GOOGLE_CALENDAR_TIMEZONE: CET
+    restart: unless-stopped
+    networks:
+      - a2a-network
+
   inference-gateway:
     image: ghcr.io/inference-gateway/inference-gateway:latest
     pull_policy: always
     ports:
       - "8080:8080"
-    env_file:
-      - .env.gateway
-    depends_on:
-      google-calendar-agent-healthcheck:
-        condition: service_healthy
+    environment:
+      ANTHROPIC_API_KEY: ${ANTHROPIC_API_KEY}
+      CLOUDFLARE_API_KEY: ${CLOUDFLARE_API_KEY}
+      COHERE_API_KEY: ${COHERE_API_KEY}
+      GROQ_API_KEY: ${GROQ_API_KEY}
+      OPENAI_API_KEY: ${OPENAI_API_KEY}
+      DEEPSEEK_API_KEY: ${DEEPSEEK_API_KEY}
+      GOOGLE_API_KEY: ${GOOGLE_API_KEY}
+      MISTRAL_API_KEY: ${MISTRAL_API_KEY}
+      ENVIRONMENT: development
+      SERVER_HOST: 0.0.0.0
+      SERVER_PORT: 8080
+      SERVER_READ_TIMEOUT: 230s
+      SERVER_WRITE_TIMEOUT: 230s
+      SERVER_IDLE_TIMEOUT: 220s
+      CLIENT_TIMEOUT: 230s
+      CLIENT_MAX_IDLE_CONNS: 220
+      CLIENT_MAX_IDLE_CONNS_PER_HOST: 220
+      CLIENT_IDLE_CONN_TIMEOUT: 130s
+      CLIENT_RESPONSE_HEADER_TIMEOUT: 120s
     restart: unless-stopped
     networks:
       - a2a-network
 
-  google-calendar-agent:
-    build:
-      context: ..
+  cli:
+    image: ghcr.io/inference-gateway/cli:latest
     pull_policy: always
-    env_file:
-      - .env.agent
-    restart: unless-stopped
+    environment:
+      INFER_LOGGING_DEBUG: true
+      INFER_GATEWAY_URL: http://inference-gateway:8080
+      INFER_A2A_ENABLED: true
+      INFER_TOOLS_ENABLED: true
+      INFER_TOOLS_QUERY_ENABLED: true
+      INFER_TOOLS_TASK_ENABLED:  true
+      INFER_TOOLS_BASH_ENABLED: false
+      INFER_TOOLS_TODO_WRITE_ENABLED: false
+      INFER_TOOLS_WRITE_ENABLED: false
+      INFER_TOOLS_READ_ENABLED: false
+      INFER_TOOLS_DELETE_ENABLED: false
+      INFER_TOOLS_EDIT_ENABLED: false
+      INFER_TOOLS_GREP_ENABLED: false
+      INFER_TOOLS_TREE_ENABLED: false
+      INFER_TOOLS_WEB_FETCH_ENABLED: false
+      INFER_TOOLS_WEB_SEARCH_ENABLED: false
+      INFER_TOOLS_GITHUB_ENABLED: false
+      INFER_AGENT_MODEL: ${PROVIDER:-deepseek}/${MODEL:-deepseek-chat}
+      INFER_A2A_AGENTS: |
+        http://google-calendar-agent:8080
+      INFER_A2A_CACHE_ENABLED: false
+    command:
+      - chat
     networks:
       - a2a-network
-
-  google-calendar-agent-healthcheck:
-    image: curlimages/curl:latest
-    entrypoint:
-      - sh
-      - -c
-      - "while true; do sleep 30; done"
-    healthcheck:
-      test:
-        - CMD
-        - curl
-        - -f
-        - http://google-calendar-agent:8080/health
-      interval: 30s
-      timeout: 10s
-      retries: 3
-      start_period: 40s
-    depends_on:
-      google-calendar-agent:
-        condition: service_started
-    restart: unless-stopped
-    networks:
-      - a2a-network
+    profiles:
+      - manual
 
   a2a-debugger:
     image: ghcr.io/inference-gateway/a2a-debugger:latest
     pull_policy: always
     entrypoint:
       - /a2a
-      - --config
-      - /config/.a2a.yaml
-    command:
-      - config
-      - set
-      - server-url
+      - --server-url
       - http://google-calendar-agent:8080
-    volumes:
-      - ./config:/config
     networks:
       - a2a-network
+    profiles:
+      - manual
 
 networks:
   a2a-network:
